8244551: Shenandoah: Fix racy update of update_watermark

Reviewed-by: shade